...
    <string name="no_audio_tracks_found">Audio tracks for this video are either unavailable or not supported.</string>
    <string name="rename">Rename</string>
    <string name="rename_to">Rename to</string>
    <string name="mark_last_played_media">Mark last played media</string>
    <string name="mark_last_played_media_desc">Mark last played media in home and in each folder</string>
    <string name="open_local_video">Open local video</string>
    <string name="pick_file">Pick file</string>
    <string name="exit">Exit</string>
    <string name="play_next_video">Play next video</string>
    <string name="skip_silence">Skip silence</string>
    <string name="folder">Folder</string>
    <string name="folders">Folders</string>
    <string name="tree">Tree</string>
...
    <string name="material_you_controls">Material You controls</string>
    <string name="material_you_controls_description">Use material you style controls</string>

    <!-- Vault -->
    <string name="hide">Hide</string>
    <string name="unhide">Unhide</string>
    <string name="vault">Vault</string>
    <string name="hidden_videos">Hidden videos</string>
    <string name="hide_one_video_confirmation">Hide this video?</string>
    <string name="hide_videos_confirmation">Hide %1$d videos?</string>
    <string name="hide_video_info">Hidden videos are moved into a private vault protected by a PIN and removed from your gallery.</string>
    <string name="hiding_videos_in_progress">Hiding…</string>
    <string name="unhiding_videos_in_progress">Unhiding…</string>
...
